@@ -18,7 +18,7 @@ extern "C" {
 
 #define FETCH_AT_ONCE		10
 #define MAX_SELECT_LIST_SIZE	256
-#define MAX_ITEM_BUFFER_SIZE	4096
+#define MAX_ITEM_BUFFER_SIZE	32768
 
 class sybaseconnection : public sqlrconnection_svr {
 	friend class sybasecursor;
